[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { path = "/home/user/risc_0/risc0/risc0/zkvm", default-features = false, features = ["std"] }
host_guest_interface = { path = "../../host_guest_interface" }

[build-dependencies]
cc = "1.0"

